deploy/argocd/base/island-cms-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cmsmvc-service
  labels:
    app: cmsmvc
    service: cmsmvc-service
spec:
  ports:
  - name: http
    port: 8001
    targetPort: 80
  selector:
    app: cmsmvc
