deploy/argocd/base/island-cms-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cmsmvc-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: cmsmvc
    hosts:
    - cms.sandbox.tkgi.islands.cloud
  rules:
  - host: cms.sandbox.tkgi.islands.cloud
    http:
      paths:
      - backend:
          serviceName: cmsmvc-service
          servicePort: 8001
